# week2_events_face

./: .env.db  .env.prod  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
src/: urls.py
src/auth_app/: models.py  serializers.py  urls.py  views.py
src/auth_app/migrations/: 0001_initial.py
src/core/: settings.py
src/events/: admin.py  models.py  serializers.py  urls.py  views.py
src/events/migrations/: 0001_initial.py
src/sync/: models.py  sync_methods.py
src/sync/management/commands/: create_cuperuser.py  events_sync.py
src/sync/migrations/: 0001_initial.py
