[project]
name = "events-face"
version = "0.1.0"
python = ">=3.9"
dependencies = [
    "django>=5.2.6",
    "poetry-core>=2.1.3",
    "ruff>=0.12.12",
    "asgiref==3.9.1",
    "charset-normalizer==3.4.3",
    "django-filter==25.1",
    "djangorestframework==3.16.1",
    "djangorestframework_simplejwt==5.5.1",
    "idna==3.10",
    "psycopg2==2.9.10",
    "requests==2.32.5",
    "sqlparse==0.5.3",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uv==0.8.14",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.workspace]
members = [
    "events-face",
]